--- a/public/less/freesia.less
+++ b/public/less/freesia.less
@@ -11,23 +11,23 @@
 }
 
 .primary-btn {
-    color           : @primary-foreground-color;
+    color: @primary-foreground-color;
     background-color: transparent;
 }
 
 .primary-btn:hover {
-    color           : @primary-foreground-color;
+    color: @primary-foreground-color;
     background-color: @primary-darker-color5;
 }
 
 .primary-btn:focus {
-    text-decoration : none;
-    color           : @primary-foreground-color;
+    text-decoration: none;
+    color: @primary-foreground-color;
     background-color: @primary-darker-color;
 }
 
 .primary-btn:active {
-    color           : @primary-foreground-color;
+    color: @primary-foreground-color;
     background-color: @primary-darker-color;
 }
 
@@ -73,8 +73,8 @@
 }
 
 .btn-bd-hover {
-    border-width    : 1px;
-    border-color    : transparent;
+    border-width: 1px;
+    border-color: transparent;
     background-color: transparent;
 }
 
@@ -84,28 +84,28 @@
 }
 
 .btn-bd-hover:focus {
-    border-width    : 1px;
-    border-color    : @primary-hover-4 ;
+    border-width: 1px;
+    border-color: @primary-hover-4 ;
     background-color: transparent;
 }
 
 button.active,
 .btn-bd-hover:hover {
-    border-width    : 1px !important;
-    border-color    : @primary-hover-5  !important;
+    border-width: 1px !important;
+    border-color: @primary-hover-5  !important;
     background-color: @primary-hover-2  !important;
 }
 
 .btn-bd-hover:active {
-    border-width    : 1px;
-    border-color    : @primary-hover-8 ;
+    border-width: 1px;
+    border-color: @primary-hover-8 ;
     background-color: @primary-hover-5 ;
 }
 
 .btn-bd-none {
     border-width: 1px;
     border-color: transparent !important;
-    box-shadow  : none !important;
+    box-shadow: none !important;
 }
 
 .btn-bk-hover {
@@ -137,34 +137,34 @@ button.active,
 
         &:active {
             background-color: @primary-lighten-30-fade-10;
-            color           : @primary-color;
+            color: @primary-color;
         }
 
         &.ant4-menu-item-selected {
-            color           : @primary-color;
+            color: @primary-color;
             background-color: @primary-lighten-30-fade-20;
-            border          : 1px solid @primary-hover-5;
+            border: 1px solid @primary-hover-5;
         }
     }
 }
 
 .ant4-btn-primary.ant4-btn-dangerous {
     border-color: @error-color;
-    background  : @error-color;
+    background: @error-color;
 
     &:hover {
         border-color: @error-color-hover;
-        background  : @error-color-hover;
+        background: @error-color-hover;
     }
 
     &:focus {
         border-color: @error-color-hover;
-        background  : @error-color-hover;
+        background: @error-color-hover;
     }
 
     &:active {
         border-color: @error-color-active;
-        background  : @error-color-active;
+        background: @error-color-active;
     }
 }
 
@@ -177,17 +177,17 @@ button.active,
 }
 
 .text-second {
-    color    : rgb(91 95 98);
+    color: rgb(91 95 98);
     font-size: 13px;
 }
 
 .text-third {
-    color    : #9E9E9E;
+    color: #9E9E9E;
     font-size: 13px;
 }
 
 .text-fouth {
-    color    : #d2d2d2;
+    color: #d2d2d2;
     font-size: 13px;
 }
 
@@ -200,8 +200,8 @@ button.active,
 }
 
 .panel {
-    border          : 1px solid rgba(36, 41, 46, .12);
-    border-radius   : 4px;
+    border: 1px solid rgba(36, 41, 46, .12);
+    border-radius: 4px;
     background-color: white;
 }
 
@@ -210,29 +210,29 @@ button.active,
 }
 
 .panel.hoverable:hover {
-    border          : 1px solid @primary-hover-5;
+    border: 1px solid @primary-hover-5;
     background-color: white;
 }
 
 .panel.hoverable:active {
-    border          : 1px solid @primary-hover-5;
+    border: 1px solid @primary-hover-5;
     background-color: @primary-lighten-30-fade-10;
 }
 
 .item-selected {
     .panel.hoverable:hover {
         background-color: @primary-lighten-30-fade-20;
-        border          : 1px solid @primary-hover-5;
+        border: 1px solid @primary-hover-5;
     }
 
     .panel.hoverable:active {
         background-color: @primary-lighten-30-fade-20;
-        border          : 1px solid @primary-hover-5;
+        border: 1px solid @primary-hover-5;
     }
 
     .panel.hoverable {
         background-color: @primary-lighten-30-fade-20;
-        border          : 1px solid @primary-hover-5;
+        border: 1px solid @primary-hover-5;
     }
 
     .project-item--template-gallery-item {
@@ -243,64 +243,64 @@ button.active,
 }
 
 .tag--success {
-    height          : 24px;
-    padding         : 2px 12px;
-    border-radius   : 15px;
-    font-size       : 13px;
+    height: 24px;
+    padding: 2px 12px;
+    border-radius: 15px;
+    font-size: 13px;
     background-color: @success-color;
-    white-space     : nowrap;
-    color           : white;
+    white-space: nowrap;
+    color: white;
 }
 
 .tag--info {
-    height          : 24px;
-    padding         : 2px 12px;
-    border-radius   : 15px;
-    font-size       : 13px;
+    height: 24px;
+    padding: 2px 12px;
+    border-radius: 15px;
+    font-size: 13px;
     background-color: @info-color;
-    white-space     : nowrap;
-    color           : white;
+    white-space: nowrap;
+    color: white;
 }
 
 .tag--selected-count {
-    height          : 24px;
-    padding         : 2px 12px;
-    border-radius   : 15px;
-    font-size       : 13px;
+    height: 24px;
+    padding: 2px 12px;
+    border-radius: 15px;
+    font-size: 13px;
     background-color: #64A319;
-    white-space     : nowrap;
-    color           : white;
+    white-space: nowrap;
+    color: white;
 }
 
 .tag--normal {
-    height          : 24px;
-    padding         : 2px 12px;
-    border-radius   : 15px;
-    font-size       : 13px;
+    height: 24px;
+    padding: 2px 12px;
+    border-radius: 15px;
+    font-size: 13px;
     background-color: fade(black, 7%);
-    white-space     : nowrap;
-    color           : #686868;
+    white-space: nowrap;
+    color: #686868;
 }
 
 .tag--primary-lighten10 {
-    height          : 24px;
-    padding         : 2px 12px;
-    border-radius   : 15px;
-    font-size       : 13px;
+    height: 24px;
+    padding: 2px 12px;
+    border-radius: 15px;
+    font-size: 13px;
     background-color: fade(@primary-color, 10%);
-    white-space     : nowrap;
-    color           : @primary-color;
+    white-space: nowrap;
+    color: @primary-color;
 }
 
 .backdrop-filter-hover {
     backdrop-filter: blur(10px);
-    background     : @primary-hover-4;
+    background: @primary-hover-4;
 }
 
 .datumburg-group-tree.ant4-tree.ant4-tree-directory .ant4-tree-treenode-selected:hover::before,
 .ant4-tree.ant4-tree-directory .ant4-tree-treenode-selected::before {
-    background   : @primary-lighten-30-fade-20  !important;
-    border       : 1px solid @primary-hover-5;
+    background: @primary-lighten-30-fade-20  !important;
+    border: 1px solid @primary-hover-5;
     border-radius: 4px;
 }
 
@@ -310,14 +310,14 @@ button.active,
 
         >.ant4-modal-header {
             border-bottom: 0px;
-            background   : transparent;
+            background: transparent;
         }
 
         >.ant4-modal-footer {
             border-top: 0;
 
             >.ant4-btn {
-                height   : 37px;
+                height: 37px;
                 min-width: 80px;
             }
         }
@@ -351,8 +351,8 @@ button.active,
 
     .ant4-tabs-ink-bar {
         background-image: linear-gradient(90deg, lighten(@primary-color, 0%) 0%, @primary-color 100%);
-        height          : 4px;
-        border-radius   : 2px;
+        height: 4px;
+        border-radius: 2px;
     }
 }
 
@@ -360,18 +360,18 @@ button.active,
     &.grafana {
 
         .panel {
-            border          : 1px solid transparent;
-            border-radius   : 4px;
+            border: 1px solid transparent;
+            border-radius: 4px;
             background-color: rgb(244, 245, 245);
         }
 
         .panel.hoverable:hover {
-            border          : 1px solid @primary-hover-5;
+            border: 1px solid @primary-hover-5;
             background-color: white;
         }
 
         .panel.hoverable:active {
-            border          : 1px solid @primary-hover-5;
+            border: 1px solid @primary-hover-5;
             background-color: @primary-lighten-30-fade-10;
         }
     }
@@ -382,7 +382,7 @@ button.active,
 }
 
 .ellipsis {
-    overflow     : hidden;
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 
@@ -421,14 +421,19 @@ button.active,
                 }
             }
 
-            .primary-header-button:hover {
-                background-color: @backstage-color-active;
+            .primary-header-button {
+                color: rgba(255, 255, 255, 0.65);
+
+                &:hover {
+                    background-color: @backstage-color-active;
+                    color: white;
+                }
             }
         }
 
         &.dark {
             .ant4-menu-horizontal.ant4-menu-dark {
-                background        : transparent;
+                background: 2 transparent;
                 // .ant4-menu-item {
                 //     display    : flex;
                 //     align-items: center;
@@ -455,8 +460,13 @@ button.active,
                 }
             }
 
-            .primary-header-button:hover {
-                background-color: @primary-color;
+            .primary-header-button {
+                color: rgba(255, 255, 255, 0.65);
+
+                &:hover {
+                    background-color: @primary-color;
+                    color: white;
+                }
             }
         }
 
@@ -474,31 +484,35 @@ button.active,
 
                 .ant4-menu-item.ant4-menu-item-only-child {
                     padding: 0 15px;
-                    margin : 0 5px;
+                    margin: 0 5px;
                 }
 
                 .ant4-menu-submenu.ant4-menu-submenu-horizontal {
                     padding: 0 15px;
-                    margin : 0 5px;
+                    margin: 0 5px;
                 }
             }
 
             .primary-header-dropdown {
 
                 &:hover {
-                    color           : @primary-color;
+                    color: @primary-color;
                     background-color: @primary-1;
                 }
 
                 &.ant4-dropdown-open {
-                    color           : @primary-color;
+                    color: @primary-color;
                     background-color: @primary-1;
                 }
             }
 
-            .primary-header-button:hover {
-                color           : @primary-color;
-                background-color: @primary-1;
+            .primary-header-button {
+                color: rgba(0, 0, 0, 0.65);
+
+                &:hover {
+                    color: @primary-color;
+                    background-color: @primary-1;
+                }
             }
         }
     }
@@ -527,7 +541,7 @@ button.active,
     }
 
     .ant4-menu-submenu-selected {
-        color           : white !important;
+        color: white !important;
         background-color: @backstage-color-active  !important;
     }
 
@@ -551,9 +565,9 @@ button.active,
     &.ant4-menu-submenu-popup {
         .ant4-menu-item {
             margin-bottom: 0 !important;
-            margin-top   : 0 !important;
-            height       : 50px !important;
-            line-height  : 50px !important;
+            margin-top: 0 !important;
+            height: 50px !important;
+            line-height: 50px !important;
         }
 
         .ant4-menu-item-selected {
@@ -570,9 +584,9 @@ button.active,
         .ant4-menu-submenu-title,
         .ant4-menu-item {
             margin-bottom: 0 !important;
-            margin-top   : 0 !important;
-            height       : 50px !important;
-            line-height  : 50px !important;
+            margin-top: 0 !important;
+            height: 50px !important;
+            line-height: 50px !important;
         }
 
         .ant4-menu-item-selected {
@@ -598,7 +612,7 @@ button.active,
     }
 
     .ant4-menu-submenu-selected {
-        color           : white !important;
+        color: white !important;
         background-color: @primary-color  !important;
     }
 
@@ -622,9 +636,9 @@ button.active,
     &.ant4-menu-submenu-popup {
         .ant4-menu-item {
             margin-bottom: 0 !important;
-            margin-top   : 0 !important;
-            height       : 50px !important;
-            line-height  : 50px !important;
+            margin-top: 0 !important;
+            height: 50px !important;
+            line-height: 50px !important;
         }
 
         .ant4-menu-item-selected {
@@ -641,9 +655,9 @@ button.active,
         .ant4-menu-submenu-title,
         .ant4-menu-item {
             margin-bottom: 0 !important;
-            margin-top   : 0 !important;
-            height       : 50px !important;
-            line-height  : 50px !important;
+            margin-top: 0 !important;
+            height: 50px !important;
+            line-height: 50px !important;
         }
 
         .ant4-menu-item-selected {
@@ -674,9 +688,9 @@ button.active,
     &.ant4-menu-submenu-popup {
         .ant4-menu-item {
             margin-bottom: 0 !important;
-            margin-top   : 0 !important;
-            height       : 50px !important;
-            line-height  : 50px !important;
+            margin-top: 0 !important;
+            height: 50px !important;
+            line-height: 50px !important;
         }
 
         .ant4-menu-item-selected {
@@ -693,9 +707,9 @@ button.active,
         .ant4-menu-submenu-title,
         .ant4-menu-item {
             margin-bottom: 0 !important;
-            margin-top   : 0 !important;
-            height       : 50px !important;
-            line-height  : 50px !important;
+            margin-top: 0 !important;
+            height: 50px !important;
+            line-height: 50px !important;
         }
 
         .ant4-menu-item-selected {
