--- a/src/components/pages/Echo/index.less
+++ b/src/components/pages/Echo/index.less
@@ -2,3 +2,9 @@
     font-size: 128px;
     color    : #bfbfbf;
 }
+
+@media screen and (max-width: 600px) {
+    .echo-text {
+        font-size: 64px;
+    }
+}
