--- a/public/less/freesia.less
+++ b/public/less/freesia.less
@@ -359,6 +359,23 @@ button.active,
             background-color: @primary-lighten-20-fade-10;
         }
     }
+
+    &.grafana.white.alpha50 {
+
+        .panel {
+            background-color: rgba(255, 255, 255, .5);
+        }
+
+        .panel.hoverable:hover {
+            border          : 1px solid @primary-hover-5;
+            background-color: @primary-lighten-30-fade-10;
+        }
+
+        .panel.hoverable:active {
+            border          : 1px solid @primary-hover-5;
+            background-color: @primary-lighten-20-fade-10;
+        }
+    }
 }
 
 .ant4-select .anticon-down {
