--- a/public/less/freesia.less
+++ b/public/less/freesia.less
@@ -376,6 +376,23 @@ button.active,
             background-color: @primary-lighten-20-fade-10;
         }
     }
+
+    &.grafana.white.alpha30 {
+
+        .panel {
+            background-color: rgba(255, 255, 255, .3);
+        }
+
+        .panel.hoverable:hover {
+            border          : 1px solid @primary-hover-5;
+            background-color: @primary-lighten-30-fade-10;
+        }
+
+        .panel.hoverable:active {
+            border          : 1px solid @primary-hover-5;
+            background-color: @primary-lighten-20-fade-10;
+        }
+    }
 }
 
 .ant4-select .anticon-down {
@@ -494,13 +511,13 @@ button.active,
                 }
 
                 .ant4-menu-item.ant4-menu-item-only-child {
-                    padding: 0 15px;
-                    margin : 0 5px;
+                    padding: 0 18px;
+                    margin : 0 2px;
                 }
 
                 .ant4-menu-submenu.ant4-menu-submenu-horizontal {
-                    padding: 0 15px;
-                    margin : 0 5px;
+                    padding: 0 18px;
+                    margin : 0 2px;
                 }
             }
 
