--- a/public/index.less
+++ b/public/index.less
@@ -1,4 +1,4 @@
-// @import './less/vars.less';
-// @import './less/antd.less';
-// @import './less/freesia.less';
+@import './less/vars.less';
+@import './less/antd.less';
+@import './less/freesia.less';
 
