--- a/src/components/pages/Echo/index.less
+++ b/src/components/pages/Echo/index.less
@@ -1,6 +1,8 @@
+@import '@yulintu/freesia-design/css/variables.less';
+
 .echo-text {
     font-size: 128px;
-    color    : #bfbfbf;
+    color:~'var(--@{ant-prefix}-primary-3)';
 }
 
 @media screen and (max-width: 600px) {
