--- a/src/components/pages/Echo/index.less
+++ b/src/components/pages/Echo/index.less
@@ -2,7 +2,8 @@
 
 .echo-text {
     font-size: 128px;
-    color:~'var(--@{ant-prefix}-primary-3)';
+    color: #bfbfbf;
+    // color:~'var(--@{ant-prefix}-primary-3)';
 }
 
 @media screen and (max-width: 600px) {
